style fixes
code tags in articles caused layout issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
 
 html {
     background: #2e475e;
+    width: 100%;
 }
 
 h1, h2, h3, h4,h5,h6 {
